app/static/app/styles.css
/* ... */
.home__social-text {
  position: relative;
  rotate: 90deg;
  font-size: var(--smaller-font-size);
  font-weight: var(--font-medium);
}

.home__social-text::after {
  content: '';
  width: 48px;
  height: 1px;
  background-color: var(--text-color);
  position: absolute;
  top: 0;
  bottom: 0;
  margin-block: auto;
  right: -64px;
}

.home__social-links {
  display: grid;
  column-gap: 75rem;
}
.home__social-link {
  font-size: 1.5rem;
  color: var(--text-color);
  transition: color .4s;
}

.home__social-link:hover {
  color: var(--first-color);
}

/* Based Search Description */
.seach__container {
    row-gap: 2.5rem;
}

.search__content {

}

.search__form {
    display: grid;
    row-gap: 1rem;
    margin-bottom: 2rem;
}

.search__input,
.search__button {
    font-size: var(--normal-font-size);
    font-family: var(--body-font);
    border: none;
    outline: none;
}

.search__input {
    width: 100%;
    padding: 1.15rem 1.25rem;
    border-radius: 4rem;
    background-color: var(--container-color);
    color: var(--text-color);

}

.search__input::placeholder {
    color: var(--text-color);
}

.search__button {
    cursor: pointer;
}

/* Search Hidden */
#search {
    display: none;
}

/* Table Search */
.table__body {
    width: 100%;
    max-height: calc(89% - 1.6rem);
    background-color: var(--container-color);

    margin: .8rem auto;
    border-radius: .6rem;

    overflow: auto;
    overflow: overlay;
}

.table__body::-webkit-scrollbar{
    width: 0.5rem;
    height: 0.5rem;
}

.table__body::-webkit-scrollbar-thumb{
    border-radius: .5rem;
    background-color: #0004;
    visibility: hidden;
}

.table__body:hover::-webkit-scrollbar-thumb{ 
    visibility: visible;
}

table {
    width: 100%;
    color: var(--white-color)
}

table, th, td {
    border-collapse: collapse;
    padding: 1rem;
    text-align: left;
}

thead th {
    position: sticky;
    top: 0;
    left: 0;
    background-color: hsl(23, 4%, 8%);;
    cursor: pointer;
    text-transform: capitalize;
}

tbody tr:nth-child(even) {
    background-color: hsl(23, 4%, 5%);
}

tbody tr {
    --delay: .1s;
    transition: .5s ease-in-out var(--delay), background-color 0s;
}

tbody tr.hide {
    opacity: 0;
    transform: translateX(100%);
}

tbody tr:hover {
    background-color: #fff1 
}

tbody tr td,
tbody tr td p,
tbody tr td img {
    transition: .2s ease-in-out;
}

tbody tr.hide td,
tbody tr.hide td p {
    padding: 0;
    font: 0 / 0 sans-serif;
    transition: .2s ease-in-out .5s;
}

tbody tr.hide td img {
    width: 0;
    height: 0;
    transition: .2s ease-in-out .5s;
}

@media (max-width: 1000px) {
    td:not(:first-of-type) {
        min-width: 12.1rem;
    }
}

thead th span.icon-arrow {
    display: inline-block;
    width: 1.3rem;
    height: 1.3rem;
    border-radius: 50%;
    border: 1.4px solid transparent;
    
    text-align: center;
    font-size: 1rem;
    
    margin-left: .5rem;
    transition: .2s ease-in-out;
}

thead th:hover span.icon-arrow{
    border: 1.4px solid var(--first-color)
}

thead th:hover {
    color: var(--first-color);
}

thead th.active span.icon-arrow{
    background-color: var(--first-color);
    color: #fff;
}

thead th.asc span.icon-arrow{
    transform: rotate(180deg);
}

thead th.active,tbody td.active {
    color: var(--first-color)
}
.action__button {
    padding: 0.3rem 1rem !important; /* Adjust these values as needed */
    font-size: 0.8rem !important;
}

/* Button */
.home__button {
    justify-self: center;
}

.button {
    background: var(--gradient-color);
    padding: .75rem 1.5rem;
    border-radius: 4rem;
    color: var(--white-color);
    font-weight: var(--font-semi-bold);
    display: inline-flex;
    justify-content: center;
    align-items: center;
    column-gap: .5rem;
    transition: box-shadow .4s;
}
  
.button i {
    font-size: 2rem;
    font-weight: initial;
    color: var(--first-color);
}

.button:hover {
    box-shadow: 0 12px 32px hsla(23, 100%, 50%, .12);
}

/* About */

.about__container {
  row-gap: 3.5rem;
}

.about__data {
    text-align: center;
}

.about__description {
    margin-bottom: 2.5rem;
}

.about__img {
    width: 280px;
    justify-self: center;
}

/* Feature */

.feature__container {
    padding-top: 2rem;
    row-gap: 2.5rem;
}

.feature__content {
    position: relative;
    justify-self: center;
}

.feature__title {
    text-align: center;
}

.feature__img {
    width: 280px;
}

.feature__tooltip-img {
    width: 60px;
}

.feature__tooltip-text {
    background: var(--gradient-color);
    padding: .23rem .75rem;
    color: var(--white-color);
    font-weight: var(--font-medium);
    border-radius: 4rem;
    font-size: var(--smaller-font-size);
    position: absolute;
    transform: translate(60px, -40px);
    white-space: nowrap;
}

.feature__tooltip-1,
.feature__tooltip-2 {
    transform: scale(-1);
}

.feature__tooltip-1 .feature__tooltip-text,
.feature__tooltip-2 .feature__tooltip-text {
    transform: translate(60px, -38px) scale(-1);
}

.feature__tooltip {
    position: absolute;
}

.feature__tooltip-1 {
    top: 6.6rem;
    left: 2.1rem;
}

.feature__tooltip-2 {
    top: 1.5rem;
    left: 1rem;
}
.feature__tooltip-3 {
    top: 5rem;
    left: 10rem;
}

.feature__button {
    justify-self: center;
}

/* Sponsor */

.sponsor__img{
    width: 100px;
    transition: transform .4s;
    
}

.sponsor__img:hover{
    transform: scale(1.1);
}

.sponsor__container{
    padding-block: .5rem 4.5rem;
    grid-template-columns: repeat(2, max-content);
    justify-content: center;
    align-items: center;
    gap: 5rem 4rem;
}

/* Footer */

.footer {
    padding-block: 2 rem;
    overflow: hidden;
}

.footer__container {
    row-gap: 4rem;
}

.footer__logo {
    font-size: var(--h2-font-size);
    font-weight: var(--font-semi-bold);
    color: var(--first-color);
}

.footer__data {
    grid-template-columns: repeat(2, 1fr);
    row-gap: 4rem;
}

.footer__title {
    font-size: var(--h3-font-size);
    margin-bottom: 1rem;
}
/* ... */

